# devops-course

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dags/: civitai_image_dag.py
docs/: design_document.md  project_tree.txt
docs/api_schema/: images.md
notebooks/: analyse_images.ipynb
plugins/civitai_images_plugin/: __init__.py  views.py
plugins/civitai_images_plugin/templates/: images.html
src/airflow/dags/: civitai_image_dag.py
src/airflow/plugins/civitai_images_plugin/: __init__.py
src/airflow/plugins/civitai_plugin/: __init__.py
src/airflow/plugins/civitai_plugin/templates/: images.html
src/airflow/plugins/civitai_plugin/views/: __init__.py  images_view.py
src/civitai_client/: __init__.py  civitai_client.py  civitai_db.py  config.py
src/utils/: image_utils.py
tests/: test_pipeline.py
